--- a/src/tooltip.css
+++ b/src/tooltip.css
@@ -2,29 +2,28 @@ div#root .shortNamespaceTooltip {
   position: relative;
   cursor: pointer
 }
-
+div#root div#main-content-container .shortNamespaceTooltip::before {
+  white-space: nowrap
+}
 div#root .shortNamespaceTooltip::before {
   content: attr(data-orig-text);
   display: block;
   padding: 3px 13px;
   background: var(--ls-secondary-background-color);
   border-radius: 4px;
-  font-size: .92em;
+  font-size: .94em;
   top: 0;
   left: 0;
   z-index: var(--ls-z-index-level-3);
   overflow: auto;
-  margin: -.4em auto;
-  position: absolute;
-  display: none;
+  margin: -.4em auto
 }
-
-div#root div:is(#main-content-container, #right-sidebar) .shortNamespaceTooltip {
-  white-space: nowrap;
-}
-
 div#root .shortNamespaceTooltip:hover::before {
   top: 0;
   opacity: 1;
   display: block;
+}
+div#root .shortNamespaceTooltip::before {
+  position: absolute;
+  display: none
 }
