--- a/src/tooltip.css
+++ b/src/tooltip.css
@@ -1,5 +1,6 @@
 body>div#root>div>main>div#app-container>div {
   & .shortNamespaceTooltip {
+    position: relative;
     cursor: pointer;
     text-decoration: underline;
 
@@ -9,26 +10,23 @@ body>div#root>div>main>div#app-container>div {
       background-color: var(--ls-secondary-background-color);
       border-radius: 4px;
       font-size: .94em;
-      position: absolute;
       top: 0;
+      left: 0;
       z-index: var(--ls-z-index-level-3);
-      display: none;
-    }
-
-    &:not(.tag)::before {
-      right: .2em;
-    }
-
-    &.tag::before {
-      left: -0.2em;
+      overflow: auto;
+      margin: -.4em auto;
+      position: absolute;
+      display: none
     }
 
     &:hover::before {
+      top: 0;
+      opacity: 1;
       display: block;
     }
   }
 
-  & div:is(#main-content-container, #right-sidebar) .shortNamespaceTooltip::before {
-    white-space: nowrap;
+  & div#main-content-container .shortNamespaceTooltip::before {
+    white-space: nowrap
   }
 }
